# papercrown

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.ci  README.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  dependencies.yaml  pyproject.toml  versions.env
.github/workflows/: ci-image.yml  ci.yml  container.yml  pages.yml  release.yml
docs/: Art Brief.md  book.yaml  book.yml  papercrown.yaml
docs/recipes/: papercrown-docs.yaml
docs/vault/: Architecture.md  Art.md  Book Configs.md  Bootstrap.md  Builds and Publishing.md  CLI.md  Container Image.md  Developer Guide.md  Development.md  GitHub Pages.md  Markdown Components.md  Overview.md  Quick Start.md  Recipes.md  Themes.md  Vaults and Markdown.md
examples/starfall/: book.yaml  book.yml  papercrown.yaml
scripts/: bootstrap.ps1  bootstrap.sh  ci-image-run.sh  clean_package.py  container-build.sh  deps-install.ps1  deps-install.sh  sync_dependencies.py  verify_package.py
src/papercrown/: __init__.py  art_audit.py  art_roles.py  assembly.py  assembly_art.py  assembly_headings.py  assembly_sources.py  build.py  build_jobs.py  build_web.py  cache.py  catalog.py  cli.py  config.py  content_lint.py  dependencies.py  diagnostics.py  doctor.py  export.py  fillers.py  image_treatments.py  images.py  manifest.py  page_damage.py  pagination.py  paths.py  pipeline.py  pipeline_pandoc.py  pipeline_pdf.py  pipeline_snapshots.py  recipe.py  resources.py  starter.py  themes.py  ttrpg.py  vaults.py  verify.py
tests/: conftest.py
tests/html/: test_html_snapshots.py  test_web_export.py
tests/pdf/: test_export_integration.py  test_filler_rendering.py  test_pdf_smoke.py
tools/: audit_public.py  verify_package.py
(+185 files in other folders)
